wip: Link author and book
