# 1_Object_Oriented/src/Presentation/Alexandria.WebApi/OpenAPI/Alexandria.WebApi.json
@@ -127,7 +127,8 @@
           "firstName",
           "middleNames",
           "lastName",
-          "birthDate"
+          "birthDate",
+          "booksIds"
         ],
         "type": "object",
         "properties": {
@@ -146,6 +147,13 @@
           "birthDate": {
             "type": "string",
             "format": "date-time"
+          },
+          "booksIds": {
+            "type": "array",
+            "items": {
+              "type": "integer",
+              "format": "int64"
+            }
           }
         }
       },
@@ -166,7 +174,8 @@
           "firstName",
           "middleNames",
           "lastName",
-          "birthDate"
+          "birthDate",
+          "booksIds"
         ],
         "type": "object",
         "properties": {
@@ -189,6 +198,13 @@
           "birthDate": {
             "type": "string",
             "format": "date-time"
+          },
+          "booksIds": {
+            "type": "array",
+            "items": {
+              "type": "integer",
+              "format": "int64"
+            }
           }
         }
       },
